# lool-

./: CLAUDE.md  DEPLOYMENT.md  LEGAL_AI_100_IMPLEMENTATION_PLAN.md  README.md  datastracture.txt  lo.txt  lol.txt  lol2.txt  lol3.txt  package-lock.json  package.json  test-features.html
courtcase/data-collection/: .env.example  .flake8  .gitignore  10_WORKERS_GUIDE.md  BANGLADESH_SCRAPER_GUIDE.md  BDLEX_SCRAPER_PLAN.md  COMPREHENSIVE_SYSTEM_TEST_REPORT.json  DELIVERABLES.md  FINAL_DATA_COLLECTION_REPORT.json  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  MULTI_CLOUD_GUIDE.md  MULTI_CLOUD_IMPLEMENTATION_SUMMARY.md  PDF_SYSTEM_TEST_REPORT.md  PROXY_INTEGRATION_SUMMARY.md  PROXY_QUICK_START.md  QUICK_START_POSTGRESQL.md  QUICK_START_UNIVERSAL.md  aggressive_downloader.py  bulk_download.py  cleanup_vms.py  dashboard.py  deep_research_indiankanoon.py  direct_download_attempt.py  fix_bangladesh_metadata.py  indiankanoon_complete_research_20251020_110459.json  indiankanoon_complete_research_20251020_110459.md  l.md  pyproject.toml  requirements_production.txt  run.sh  run_bangladesh_scraper.py  scrape_bangladesh_fast.py  test_complete_system.py  test_concurrent_download.py  test_parser_on_saved_html.py  test_proxies.py  unified_scraper.py
courtcase/data-collection/Legal_Database/_SYSTEM/: README.md  taxonomy.json
courtcase/data-collection/config/: bangladesh.yaml  config.yaml  config_production.yaml  law_codes.json  settings.yaml
courtcase/data-collection/logs/: bangladesh_fast_stats_20251023_065440.json  bangladesh_fast_stats_20251023_070014.json  bangladesh_stats_20251023_064842.json
courtcase/data-collection/migrations/: add_bangladesh_laws.sql  create_unified_schema.sql  create_universal_schema.sql  migrate_to_universal.sql
courtcase/data-collection/migrations/versions/: 60f6a33a457f_initial_schema_with_legal_cases_and_url_.py
courtcase/data-collection/scraper/: __init__.py  download_manager.py  url_collector.py
courtcase/data-collection/src/: __init__.py  config_loader.py  config_loader_old.py  config_schema.py  database.py  exceptions.py  llm_manager.py  logging_config.py  scraper.py
courtcase/data-collection/src/cloud_providers/: __init__.py  base.py  vultr_provider.py  (+1 more)
courtcase/data-collection/templates/: dashboard.html
(+1116 files in other folders)
